<resources>
    <string name="app_name">LCK_manager</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="app_bar_name">The LCK Manager</string>

    <string name="temp_news">Gen.G 소속 탑 라이너 “Doran” 솔로 랭크에서 중국인 유저를 향해 욕설 논란…</string>
    <string name="transfer_window">Transfer Window</string>
    <string name="fame_lv">Fame LV:</string>
    <string name="money">Money :</string>
    <string name="season">Season</string>
    <string name="nickname">Nickname</string>
    <string name="avg">Avg</string>
    <string name="stability">Stability</string>
    <string name="sub_players">Sub Players</string>
    <string name="todays_news">Today\'s News</string>
    <string name="vs">vs</string>
    <string name="rank">rank</string>
    <string name="record">record</string>
    <string name="team">Team</string>
    <string name="wins">승</string>
    <string name="loses">패</string>
    <string name="win_rate">승률</string>
    <string name="win_diff">승점</string>
    <string name="pog_point">POG point</string>
    <string name="point">point</string>

    <string name="server_client_id">331615894052-0ki8p24scal2tfm75uu2fg52fqe3qgjr.apps.googleusercontent.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">this is ban-pick fragment</string>
</resources>