<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_percent="0.02"
            android:id="@+id/guideline_h_1"/>

    <androidx.constraintlayout.widget.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_percent="0.46"
            android:id="@+id/guideline_h_2"/>

    <androidx.constraintlayout.widget.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_percent="0.95"
            android:id="@+id/guideline_h_3"/>

    <androidx.constraintlayout.widget.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_percent="0.02"
            android:id="@+id/guideline_v_1"/>

    <androidx.constraintlayout.widget.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_percent="0.98"
            android:id="@+id/guideline_v_2"/>

    <TextView
            android:text="Gen.G"
            android:theme="@style/Theme.LCK_manager.commonTextTheme"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView3"
            app:layout_constraintEnd_toStartOf="@+id/guideline_v_2"
            app:layout_constraintStart_toStartOf="@+id/guideline_v_1"
            app:layout_constraintTop_toTopOf="@+id/guideline_h_1"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="363dp"
            android:layout_height="252dp"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            android:id="@+id/team_main_roster"
            android:background="@drawable/box_border" app:layout_constraintEnd_toStartOf="@+id/guideline_v_2"
            app:layout_constraintStart_toStartOf="@+id/guideline_v_1"
            app:layout_constraintBottom_toTopOf="@+id/guideline_h_2">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="40dp">
            <TextView
                    android:textColor="@color/text_color"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" android:id="@+id/main_roster_position_icon_col"
                    android:layout_weight="0.1"/>
            <TextView
                    android:text="@string/season"
                    android:theme="@style/Theme.LCK_manager.commonTextTheme"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" android:id="@+id/main_roster_season_col"
                    android:layout_weight="0.15"/>
            <TextView
                    android:text="@string/nickname"
                    android:theme="@style/Theme.LCK_manager.commonTextTheme"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" android:id="@+id/main_roster_player_name_col"
                    android:layout_weight="0.35"/>
            <TextView
                    android:text="@string/avg"
                    android:theme="@style/Theme.LCK_manager.commonTextTheme"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" android:id="@+id/main_roster_avg_col"
                    android:layout_weight="0.2"/>
            <TextView
                    android:text="@string/stability"
                    android:theme="@style/Theme.LCK_manager.commonTextTheme"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" android:id="@+id/main_roster_stability_col"
                    android:layout_weight="0.2"/>
        </LinearLayout>
        <ListView
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:id="@+id/main_roster_list"
                android:layout_width="352dp"
                android:layout_height="216dp"
                android:headerDividersEnabled="true"
                android:divider="@drawable/main_roster_divider"
                android:listSelector="@drawable/list_view_select_border"
        />

    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="382dp"
            android:layout_height="294dp"
            app:layout_constraintTop_toTopOf="@+id/guideline_h_2"
            app:layout_constraintEnd_toStartOf="@+id/guideline_v_2"
            app:layout_constraintStart_toStartOf="@+id/guideline_v_1"
            app:layout_constraintBottom_toTopOf="@+id/guideline_h_3">
        <TextView
                android:text="@string/sub_players"
                android:theme="@style/Theme.LCK_manager.commonTextTheme"
                android:textSize="22sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/sub_roster_title"
        />
        <include
                layout="@layout/player_status_for_list_header"
                android:layout_width="match_parent"
                android:layout_height="40dp"/>
        <ListView
                android:id="@+id/sub_roster_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:headerDividersEnabled="true"
                android:divider="@drawable/main_roster_divider"
                android:listSelector="@drawable/list_view_select_border"
        />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>