<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_percent="0.02"
            android:id="@+id/guideline_h_1"/>

    <androidx.constraintlayout.widget.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_percent="0.75"
            android:id="@+id/guideline_h_2"/>

    <androidx.constraintlayout.widget.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_percent="0.9"
            android:id="@+id/guideline_h_3"/>

    <androidx.constraintlayout.widget.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_percent="0.02"
            android:id="@+id/guideline_v_1"/>

    <androidx.constraintlayout.widget.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_percent="0.98"
            android:id="@+id/guideline_v_2"/>

    <TextView
            android:text="@string/transfer_window"
            android:layout_width="wrap_content"
            android:theme="@style/Theme.LCK_manager.commonTextTheme"
            android:textSize="25sp"
            android:layout_height="wrap_content" android:id="@+id/transfer_window_title"
            app:layout_constraintEnd_toStartOf="@+id/guideline_v_2"
            app:layout_constraintStart_toStartOf="@+id/guideline_v_1"
            app:layout_constraintHorizontal_bias="0.497" app:layout_constraintTop_toTopOf="@+id/guideline_h_1"/>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="352dp"
            android:layout_height="419dp"
            app:layout_constraintTop_toBottomOf="@+id/transfer_window_title" android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="@+id/guideline_v_1"
            android:background="@drawable/box_border"
            android:id="@+id/linearLayout" app:layout_constraintEnd_toStartOf="@+id/guideline_v_2"
            app:layout_constraintBottom_toTopOf="@+id/guideline_h_2" app:layout_constraintHorizontal_bias="0.488"
            app:layout_constraintVertical_bias="0.0">
        <TextView
                android:text="1st week of March"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/week_title"
                android:theme="@style/Theme.LCK_manager.commonTextTheme"
                android:background="@drawable/transfer_window_week_border"
                android:textSize="20sp"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:layout_marginTop="10dp"
        />

        <include
                layout="@layout/player_status_for_list_header"
                android:layout_width="match_parent"
                android:layout_height="40dp"/>

        <ListView
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:id="@+id/weekly_transfer_window_list_view"
                android:layout_width="341dp"
                android:layout_height="323dp"
                android:headerDividersEnabled="true"
                android:divider="@drawable/main_roster_divider"
                android:listSelector="@drawable/list_view_select_border"
        />

    </LinearLayout>

    <ImageButton
            android:layout_width="172dp"
            android:layout_height="49dp" app:srcCompat="@drawable/transfer_window_refresh_button"
            android:id="@+id/transfer_window_refresh_button"
            style="?android:attr/borderlessButtonStyle"
            app:layout_constraintStart_toStartOf="@+id/guideline_v_1"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintEnd_toStartOf="@+id/guideline_v_2"
            app:layout_constraintTop_toTopOf="@+id/guideline_h_2" app:layout_constraintVertical_bias="0.0"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="347dp"
            android:layout_height="46dp" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/transfer_window_refresh_button"
            app:layout_constraintStart_toStartOf="@+id/guideline_v_1"
            app:layout_constraintVertical_bias="0.052" app:layout_constraintHorizontal_bias="0.52"
            android:background="@drawable/box_border"
            android:id="@+id/linearLayout5" app:layout_constraintEnd_toStartOf="@+id/guideline_v_2"
            app:layout_constraintBottom_toTopOf="@+id/guideline_h_3">

        <TextView
                android:text="@string/fame_lv"
                android:textSize="20sp"
                android:theme="@style/Theme.LCK_manager.commonTextTheme"
                android:textAlignment="viewEnd"
                android:layout_width="0dp"
                android:layout_height="match_parent" android:id="@+id/transfer_window_fame_lv_title"
                android:layout_weight="0.3"
                tools:ignore="RtlCompat"/>
        <TextView
                android:text="20"
                android:paddingLeft="10dp"
                android:textSize="15sp"
                android:theme="@style/Theme.LCK_manager.commonTextTheme"
                android:textAlignment="viewStart"
                android:layout_width="0dp"
                android:layout_height="match_parent" android:id="@+id/transfer_window_fame_lv"
                android:layout_weight="0.2"
                tools:ignore="RtlCompat"/>
        <TextView
                android:text="@string/money"
                android:textSize="20sp"
                android:theme="@style/Theme.LCK_manager.commonTextTheme"
                android:textAlignment="viewEnd"
                android:layout_width="0dp"
                android:layout_height="match_parent" android:id="@+id/transfer_window_money_title"
                android:layout_weight="0.3"
                tools:ignore="RtlCompat"/>
        <TextView
                android:text="$20"
                android:paddingLeft="10dp"
                android:textSize="10sp"
                android:theme="@style/Theme.LCK_manager.commonTextTheme"
                android:textAlignment="viewStart"
                android:layout_width="0dp"
                android:layout_height="match_parent" android:id="@+id/transfer_window_money" android:layout_weight="0.2"
                tools:ignore="RtlCompat"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>